--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,25 +1,46 @@
 <%- include("partials/header.ejs") %>
 
 <script>
-    let userLatitude, userLongitude, nearestRegion, pm25Value, pm25json; // Declare variables at a higher scope
-    const PM25api = 'https://api.data.gov.sg/v1/environment/pm25';
+    let nearestRegion, nearestArea;
+    let pm25Value, pm25Json;
+    let psiValue, psiJson;
+    let uviValue, uviJson;
+    let weatherValue, weatherJson;
 
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-            userLatitude = position.coords.latitude;
-            userLongitude = position.coords.longitude;
-            console.log(`Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
+    const currentDateAndTime = new Date();
 
-            // Call fetchData here to make the API call after getting the user's location
-            fetchData();
+    // Get date and time components
+    const year = currentDateAndTime.getFullYear();
+    const month = currentDateAndTime.getMonth() + 1; // Note: Month is zero-based, so we add 1
+    const day = currentDateAndTime.getDate();
+    const hours = currentDateAndTime.getHours();
+    const minutes = currentDateAndTime.getMinutes();
+    const seconds = currentDateAndTime.getSeconds();
+
+    const pm25api = 'https://api.data.gov.sg/v1/environment/pm25?date_time=${year}-${month}-${day}T${hours}:${minutes}:${seconds}';
+    const psiApi = "https://api.data.gov.sg/v1/environment/psi?date_time=${year}-${month}-${day}T${hours}:${minutes}:${seconds}"
+    const uviApi = "https://api.data.gov.sg/v1/environment/uv-index?date_time=${year}-${month}-${day}T${hours}:${minutes}:${seconds}"
+    const weatherApi = "https://api.data.gov.sg/v1/environment/2-hour-weather-forecast?date_time=${year}-${month}-${day}T${hours}:${minutes}:${seconds}"
+
+    let userLatitude = 1.316576119456869;
+    let userLongitude = 103.83240698999445;
+
+    // if (navigator.geolocation) {
+    //     navigator.geolocation.getCurrentPosition(function(position) {
+    //         userLatitude = position.coords.latitude;
+    //         userLongitude = position.coords.longitude;
+    //         console.log(`Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
+
+    //         // Call fetchData here to make the API call after getting the user's location
+            fetchPM25Data();
             document.getElementById('pm25Info').innerHTML = `Current latitude: ${userLatitude}, Current longitude: ${userLongitude}, Region: ${nearestRegion}, pm25Value: ${pm25Value}`;
-        });
-    } else {
-        console.log("Geolocation is not supported by this browser.");
-    }
+    //     });
+    // } else {
+    //     console.log("Geolocation is not supported by this browser.");
+    // }
     
-    function getNearestRegion(latitude, longitude) {
-        const regions = pm25json.region_metadata;
+    function getNearestRegion(latitude, longitude, locationMetaData) {
+        const regions = locationMetaData;
         nearestRegion = regions[0];
         let minDistance = calculateDistance(latitude, longitude, nearestRegion.label_location.latitude, nearestRegion.label_location.longitude);
 
@@ -31,7 +52,6 @@
                 nearestRegion = regions[i];
             }
         }
-
         return nearestRegion;
     }
     
@@ -49,19 +69,52 @@
         return distance;
     }
 
-    function fetchData() {
-        // Make API call to get PM2.5 data
-        fetch(PM25api)
+    function fetchPM25Data() {
+        fetch(pm25api)
             .then(response => response.json())
             .then(data => {
-            pm25json = data; // Set the global pm25json variable
-            nearestRegion = getNearestRegion(userLatitude, userLongitude);
-            pm25Value = pm25json.items[0].readings.pm25_one_hourly[nearestRegion.name];
-
-                // Display the PM2.5 value
-                console.log('PM2.5 Value:', pm25Value);
+            pm25Json = data; // Set the global pm25Json variable
+            nearestRegion = getNearestRegion(userLatitude, userLongitude, pm25Json.region_metadata);
+            pm25Value = pm25Json.items[0].readings.pm25_one_hourly[nearestRegion.name];
+            console.log('PM2.5 Value:', pm25Value);
             })
-            .catch(error => console.error('Error fetching data:', error));
+            .catch(error => console.error('Error fetching PM2.5 data:', error));
+    }
+
+    function fetchPsiData() {
+        fetch(psiApi)
+            .then(response => response.json())
+            .then(data => {
+            psiJson = data; // Set the global psiJson variable
+            nearestRegion = getNearestRegion(userLatitude, userLongitude, psiJson.region_metadata);
+            psiValue = psiJson.items[0].readings.psi_twenty_four_hourly[nearestRegion];;
+            console.log('PSI Value:', psiValue);
+            })
+            .catch(error => console.error('Error fetching PSI data:', error));
+    }
+
+    function fetchUviData() {
+        fetch(uviApi)
+            .then(response => response.json())
+            .then(data => {
+            uviJson = data; // Set the global uviJson variable
+            uviValue = uviJson.items[0].index[0].value;
+            console.log('UVI Value:', uviValue);
+            })
+            .catch(error => console.error('Error fetching UVI data:', error));
+    }
+
+    function fetchWeatherData() {
+        fetch(weatherApi)
+            .then(response => response.json())
+            .then(data => {
+            weatherJson = data; // Set the global uviJson variable
+            nearestArea = getNearestRegion(userLatitude, userLongitude, weatherJson.area_metadata);
+            weatherValue = weatherJson.items[0].forecasts.find(area => area.area === nearestArea.name).forecast;
+
+            console.log('Weather Value:', weatherValue);
+            })
+            .catch(error => console.error('Error fetching Weather data:', error));
     }
 
 </script>
@@ -70,21 +123,21 @@
     <h1>DashBoardSG</h1>
 
     <% if (selectedDash["PM25"]) { %>
-    <p>`PM2.5 is ${pm25Value}`</p>
-    <!-- Display latitude and longitude here if needed -->
-    <p id="pm25Info"></p>
+        <p>PM2.5 is selected</p>
+        <!-- Display latitude and longitude here if needed -->
+        <p id="pm25Info"></p>
     <% } %>
 
     <% if (selectedDash["PSI"]) { %>
-    <p>PSI is selected</p>
+        <p>PSI is selected</p>
     <% } %>
 
     <% if (selectedDash["UVI"]) { %>
-    <p>UVI is selected</p>
+        <p>UVI is selected</p>
     <% } %>
 
     <% if (selectedDash["Weather"]) { %>
-    <p>Weather is selected</p>
+        <p>Weather is selected</p>
     <% } %>
 </body>
 
