--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -216,7 +216,7 @@ footer .menu li a:hover {
   color: #fff;
 }
 p {
-  color: whtie;
+  color: white;
   text-align: center;
   margin-top: 15px;
   margin-bottom: 10px;
