--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,34 +2,54 @@
 
 <%- include("partials/header.ejs") %>
 
-<body>
-  
-  <img class="logo" src="http://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
+<script>
+  let userLatitude, userLongitude;
+  let browserGPSallowed;
+
+  if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+          userLatitude = position.coords.latitude;
+          userLongitude = position.coords.longitude;
+          browserGPSallowed = true;
+          console.log(`Inside Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
+        });
+      } else {
+        console.log("Geolocation is not supported by this browser.");
+        browserGPSallowed = false;
+      }
+  // For some reason the following line cannot show the global variables of userLatitude and userLongitude. I already declared those as global variables.
+  console.log(`Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
+      
+</script>
+  <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
   <h1>DashBoardSG</h1>
   <h2>What's important to you?</h2>
-  
-  <form action="/display" method="post">
+    
+  <form id="myForm" action="/display" method="post">
 
     <label for="dash1">
-      <input type="checkbox" id="dash1" name="PM25" value="Item 1"> PM2.5
+      <input type="checkbox" id="dash1" name="PM25" value= "pm25Value" > PM2.5
     </label>
 
     <label for="dash2">
-      <input type="checkbox" id="dash2" name="PSI" value="Item 2"> PSI
+      <input type="checkbox" id="dash2" name="PSI" value="psiValue"> PSI
     </label>
 
     <label for="dash3">
-      <input type="checkbox" id="dash3" name="UVI" value="Item 3"> UVI
+      <input type="checkbox" id="dash3" name="UVI" value="uviValue"> UVI
     </label>
 
     <label for="dash4">
-      <input type="checkbox" id="dash4" name="Weather" value="Item 4"> Weather
+      <input type="checkbox" id="dash4" name="Weather" value="weatherValue"> Weather
     </label>
-
     <input type="submit" value="Display">
+    <!-- For some reason the following two lines don't work in passing the GPS locations -->
+    <input type="hidden" id="userLatitude" name="userLatitude" value="<%= userLatitude %>">
+    <input type="hidden" id="userLongitude" name="userLongitude" value="<%= userLongitude %>">
 
   </form>
+  
+  
 
-</body>
-    
-  <%- include("partials/footer.ejs") %>
+
+<%- include("partials/footer.ejs") %>
