--- a/views/display.ejs
+++ b/views/display.ejs
@@ -5,13 +5,13 @@
 
 <% if (selectedDash["PM25"]) { %>
     <p>
-        PM2.5 is selected <%= selectedDash["PM25"] %>
+        PM2.5 is <%= selectedDash["PM25"] %>
     </p>
     <% } %>
     
 <% if (selectedDash["PSI"]) { %>
     <p>
-        PSI is selected <%= selectedDash["PSI"] %>
+        PSI is <%= selectedDash["PSI"] %>
     </p>
     <% } %>
 
