--- a/views/display.ejs
+++ b/views/display.ejs
@@ -2,7 +2,9 @@
 
 
 <h1>DashBoardSG</h1>
-
+<script>
+    console.log("This is from display.ejs!";
+</script>
 <% if (selectedDash["PM25"]) { %>
     <p>
         PM2.5 is <%= selectedDash["PM25"] %>
@@ -16,11 +18,15 @@
     <% } %>
 
 <% if (selectedDash["UVI"]) { %>
-    <p>UVI is selected</p>
+    <p>
+        UVI is <%= selectedDash["UVI"] %>
+    </p>
 <% } %>
 
 <% if (selectedDash["Weather"]) { %>
-    <p>Weather is selected</p>
+    <p>
+        Weather is <%= selectedDash["Weather"] %>
+    </p>
 <% } %>
 
 
