--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,19 +10,24 @@
       navigator.geolocation.getCurrentPosition(function(position) {
           userLatitude = position.coords.latitude;
           userLongitude = position.coords.longitude;
-          browserGPSallowed = true;
+          document.querySelector("#userLatitude").value = userLatitude;
+          document.querySelector("#userLongitude").value = userLongitude;
+          document.querySelector("#browserWarning").innerHTML = "Browser allows GPS!";
           console.log(`Inside Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
         });
       } else {
         console.log("Geolocation is not supported by this browser.");
+        document.querySelector("#browserWarning").innerHTML = "Please enable location on this browser";
         browserGPSallowed = false;
       }
-  // For some reason the following line cannot show the global variables of userLatitude and userLongitude. I already declared those as global variables.
-  console.log(`Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
       
 </script>
+
+<div>
   <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
   <h1>DashBoardSG</h1>
+</div>
+<div>
   <h2>What's important to you?</h2>
     
   <form id="myForm" action="/display" method="post">
@@ -43,13 +48,11 @@
       <input type="checkbox" id="dash4" name="Weather" value="weatherValue"> Weather
     </label>
     <input type="submit" value="Display">
-    <!-- For some reason the following two lines don't work in passing the GPS locations -->
-    <input type="hidden" id="userLatitude" name="userLatitude" value="<%= userLatitude %>">
-    <input type="hidden" id="userLongitude" name="userLongitude" value="<%= userLongitude %>">
+    <input type="hidden" id="userLatitude" name="userLatitude" value="latitude">
+    <input type="hidden" id="userLongitude" name="userLongitude" value="longitude">
 
   </form>
-  
-  
-
+</div>
+  <h3 id="browserWarning"></h3>
 
 <%- include("partials/footer.ejs") %>
