--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
           userLongitude = position.coords.longitude;
           document.querySelector("#userLatitude").value = userLatitude;
           document.querySelector("#userLongitude").value = userLongitude;
-          document.querySelector("#browserWarning").innerHTML = "Browser allows GPS!";
+          // document.querySelector("#browserWarning").innerHTML = "Browser allows GPS!";
           console.log(`Inside Latitude: ${userLatitude}, Longitude: ${userLongitude}`);
         });
       } else {
