--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
     <label for="dash4">
       <input type="checkbox" id="dash4" name="Weather" value="weatherValue"> Weather
     </label>
-    <input class="btnLarge" type="submit" value="Display">
+    <input type="submit" value="Display">
     <input type="hidden" id="userLatitude" name="userLatitude" value="latitude">
     <input type="hidden" id="userLongitude" name="userLongitude" value="longitude">
 
