--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,21 +1,18 @@
 <%- include("partials/header.ejs") %>
 
-  <h1>About Me</h1>
-  <img class="profile" src="images/cat.jpeg" alt="cat profile">
-  <p>
-    Quam purus justo enim purus, dolor enim, ut eu lectus nam eget nibh. Ante illum nullam leo, vivamus aliquam massa
-    massainceptos fermentum porttitor, blandit vehicula, lorem in placerat ut aliquam at sociosqu. Vivamus duis
-    ultricies
-    aliquam placerat, tincidunt scelerisque imperdiet, egestas erat vel. Libero rerum. Donec ligula tristique, purus
-    montes,
-    feugiatid nunc in a nec. Duis odio, vitae sed etiam mi massa, laoreet amet purus amet rhoncus, eget sed, arcu
-    urna.
-    Maecenaswisi id, at donec enim. Proin nisl, pulvinar leo suspendisse, cum parturient non, congue leo et ut in,
-    neque ut
-    lacusauctor quam fermentum urna. Metus quis, mauris dictum aptent ultrices nulla viverra ornare, tempor elit enim
-    leo
-    donec,sed sed. Vivamus sapien facilisi, tempor arcu nulla justo sed et, eget suspendisse lacus sed nunc mattis
-    lectus.
-    Metusgravida.</p>
-
+<img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
+<h1>About DashBoardSG</h1>
+  <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
+  <div class="about">
+    <h2>
+      DashBoardSG is a minimum viable product.
+    </h2>
+    <h2>New features to be built in the future include:</h2>
+    <ol>
+      <li>Cookies to allow persistence</li>
+      <li>Addition of new dashboard items (Suggestions are welcome)</li>
+      <li>More error handling routines and messages</li>
+    </ol>
+  </div>
+    
 <%- include("partials/footer.ejs") %>
