--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,7 @@
     <label for="dash4">
       <input type="checkbox" id="dash4" name="Weather" value="weatherValue"> Weather
     </label>
+    <br> <!-- Add a line break here -->
     <input type="submit" value="Display">
     <input type="hidden" id="userLatitude" name="userLatitude" value="latitude">
     <input type="hidden" id="userLongitude" name="userLongitude" value="longitude">
