--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -36,7 +36,13 @@ h1 {
 }
 
 p {
-  color: grey;
+  color: white;
+  font-size: medium;
+}
+
+li {
+  color: white;
+  font-size: large;
 }
 
 img {
@@ -54,6 +60,17 @@ form {
   object-fit: cover;
   border-radius: 50%;
 }
+
+/* .about {
+  background-color: grey;
+  opacity: 0.5;
+  align-items: center;
+  flex-direction: column;
+  justify-content: stretch;
+  display: flex;
+  color: #ffffff; /* Set text color for better visibility */
+} */
+
 form {
   margin-top: 50px;
 }
@@ -85,7 +102,8 @@ textarea {
 }
 
 [type="submit"] {
-  width: 100%;
+  width: 200px;
+  height: 60px;
   background: #3586ff;
   border-radius: 5px;
   border: 0;
@@ -95,9 +113,9 @@ textarea {
   padding-top: 10px;
   padding-bottom: 10px;
   transition: all 0.3s;
-  margin-top: -4px;
   font-weight: 700;
 }
 [type="submit"]:hover {
   background: #3586ff;
+  font-size: 28px;
 }
