--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,19 +33,19 @@
   <form id="myForm" action="/display" method="post">
 
     <label for="dash1">
-      <input type="checkbox" id="dash1" name="PM25" value= "pm25Value" > PM2.5
+      <input type="checkbox" id="dash1" name="PM25" value= "pm25Value" checked> PM2.5
     </label>
 
     <label for="dash2">
-      <input type="checkbox" id="dash2" name="PSI" value="psiValue"> PSI
+      <input type="checkbox" id="dash2" name="PSI" value="psiValue" checked> PSI
     </label>
 
     <label for="dash3">
-      <input type="checkbox" id="dash3" name="UVI" value="uviValue"> UVI
+      <input type="checkbox" id="dash3" name="UVI" value="uviValue" checked> UVI
     </label>
 
     <label for="dash4">
-      <input type="checkbox" id="dash4" name="Weather" value="weatherValue"> Weather
+      <input type="checkbox" id="dash4" name="Weather" value="weatherValue" checked> Weather
     </label>
     <br> <!-- Add a line break here -->
     <input type="submit" value="Display">
