--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 
-
+<img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
 <h1>DashBoardSG</h1>
 <script>
     console.log(selectedDash);
