--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,25 +11,21 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-custom navbar-mainbg">
-      <a class="navbar-brand navbar-logo" href="/">DashboardSG</a>
-      <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <i class="fas fa-bars text-white"></i>
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-primary">
+      <a class="navbar-brand" href="/">DashBoardSG</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <div class="hori-selector">
-            <div class="left"></div>
-          </div>
-          <li class="nav-item">
-            <a class="nav-link" href="/"><i class="far fa-copy"></i>Home</a>
+      <div class="collapse navbar-collapse" id="navbarToggler">
+        <ul class="navbar-nav ml-auto mt-0 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about"><i class="far fa-clone"></i>About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact"><i class="far fa-calendar-alt"></i>Contact</a>
+            <a class="nav-link" href="/contact">Contacts</a>
           </li>
         </ul>
       </div>
