--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -1,34 +1,30 @@
-html,
+/* html,
 body {
   height: 100%;
-}
+} */
 
 body {
   background: url("https://wallpaperaccess.com/full/328442.jpg") center/cover fixed;
-  filter: brightness(100%); /* Adjust the percentage to control the dimness */
   height: 100vh;
   margin: 0;
-  display: flex;
+  padding: 20px;
   align-items: center;
-  justify-content: center;
   color: #ffffff; /* Set text color for better visibility */
-}
-
-body {
   display: flex;
   flex-direction: column;
   justify-content: stretch;
 }
 
-header,
-footer {
-  flex: 0 0 auto;
+main {
+  margin: 0px;
+  padding: 20px;
+  align-items: center;
 }
 
-main {
-  text-align: center;
-  padding: 5vmin;
-  flex: 1 0 auto;
+header{
+  flex: 0 0 auto;
+  background-color: blue;
+  margin-bottom: 1.5rem; 
 }
 
 h1 {
@@ -38,20 +34,30 @@ h1 {
 p {
   color: white;
   font-size: medium;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 
-li {
+/* li {
   color: white;
-  font-size: large;
-}
+} */
 
-img {
+img.logo {
   height: 50px;
 }
 
-form {
-  text-align: center;
-  font-size: 1em;
+.titleBlock {
+  padding: 1em;
+  align-items: center;
+}
+
+.formBlock {
+  padding: 1em;
+}
+
+.custom-control-label {
+  padding: 0px 20px;
 }
 
 .profile {
@@ -61,11 +67,33 @@ form {
   border-radius: 50%;
 }
 
-form {
-  margin-top: 50px;
+.feedback-input {
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border: 2px solid #3586ff;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: 0;
 }
 
-[type="submit"] {
+.feedback-input:focus {
+  border: 2px solid #3586ff;
+}
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize: vertical;
+}
+
+/* [type="submit"] {
   width: 200px;
   height: 60px;
   background: #3586ff;
@@ -83,4 +111,4 @@ form {
 [type="submit"]:hover {
   background: #3586ff;
   font-size: 26px;
-}
+} */
