--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,270 +6,51 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
-i {
-  margin-right: 10px;
+.navbar-brand {
+  padding-left: 1rem;
 }
-
-#dash4 {
-  margin-bottom: 50px;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Two columns */
-  gap: 20px; /* Increased gap between items for better spacing */
-  list-style: none; /* Remove default list styling */
-}
-
-.grid-item {
+.card {
   text-align: center;
   padding: 15px;
+  margin: 15px;
   border-radius: 15px; /* Rounded corners */
   background-color: #f0f0f0; /* Background color for the squares */
-  opacity: 0.95;
+  opacity: 0.9;
 }
-
-.grid-item strong {
+.card strong {
   font-size: 1.5em; /* Large font size for headings */
   color: darkblue;
 }
-
-.grid-item .value {
+.card.value {
   font-size: 3em; /* Larger font size for values */
   color: blue;
 }
-
-.grid-item .unit {
+.card.unit {
   font-size: 0.8em; /* Smaller font size for units */
   color: darkgray; /* Adjust color for units */
 }
-
-/*----------bootstrap-navbar-css------------*/
-.navbar-logo {
-  padding: 15px;
-  color: #fff;
-}
-.navbar-mainbg {
-  background-color: #3586ff;
-  padding: 0px;
-}
-#navbarSupportedContent {
-  overflow: hidden;
-  position: relative;
-}
-#navbarSupportedContent ul {
-  padding: 0px;
-  margin: 0px;
-}
-#navbarSupportedContent ul li a i {
-  margin-right: 10px;
-}
-#navbarSupportedContent li {
-  list-style-type: none;
-  float: left;
-}
-#navbarSupportedContent ul li a {
-  color: rgba(255, 255, 255, 0.5);
-  text-decoration: none;
-  font-size: 15px;
-  display: block;
-  padding: 20px 20px;
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  position: relative;
-}
-#navbarSupportedContent > ul > li.active > a {
-  color: #3586ff;
-  background-color: transparent;
-  transition: all 0.7s;
-}
-#navbarSupportedContent a:not(:only-child):after {
-  content: "\f105";
-  position: absolute;
-  right: 20px;
-  top: 10px;
-  font-size: 14px;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  padding-right: 3px;
-  vertical-align: middle;
-  font-weight: 900;
-  transition: 0.5s;
-}
-#navbarSupportedContent .active > a:not(:only-child):after {
-  transform: rotate(90deg);
-}
-.hori-selector {
-  display: inline-block;
-  position: absolute;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  background-color: #fff;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  margin-top: 10px;
-}
-.hori-selector .right,
-.hori-selector .left {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  background-color: #fff;
-  bottom: 10px;
-}
-.hori-selector .right {
-  right: -25px;
-}
-.hori-selector .left {
-  left: -25px;
-}
-.hori-selector .right:before,
-.hori-selector .left:before {
-  content: "";
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: #3586ff;
-}
-.hori-selector .right:before {
-  bottom: 0;
-  right: -25px;
-}
-.hori-selector .left:before {
-  bottom: 0;
-  left: -25px;
-}
-
-@media (min-width: 992px) {
-  .navbar-expand-custom {
-    -ms-flex-flow: row nowrap;
-    flex-flow: row nowrap;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-  }
-  .navbar-expand-custom .navbar-nav {
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  .navbar-expand-custom .navbar-toggler {
-    display: none;
-  }
-  .navbar-expand-custom .navbar-collapse {
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  #navbarSupportedContent ul li a {
-    padding: 12px 30px;
-  }
-  .hori-selector {
-    margin-top: 0px;
-    margin-left: 10px;
-    border-radius: 0;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-  }
-  .hori-selector .left,
-  .hori-selector .right {
-    right: 10px;
-  }
-  .hori-selector .left {
-    top: -25px;
-    left: auto;
-  }
-  .hori-selector .right {
-    bottom: -25px;
-  }
-  .hori-selector .left:before {
-    left: -25px;
-    top: -25px;
-  }
-  .hori-selector .right:before {
-    bottom: -25px;
-    left: -25px;
-  }
-}
-
 footer {
-  position: relative;
-  width: 100%;
-  background: #3586ff;
   min-height: 50px;
   padding: 20px 50px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  color: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
-
-/* footer .social_icon,
-footer .menu {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-}
-
-footer .social_icon li,
-footer .menu li {
-  list-style: none;
-}
-footer .social_icon li a {
-  font-size: 2em;
-  color: #ccc;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-}
-footer .social_icon li a:hover {
-  transform: translateY(-15px);
-  color: blue;
-}
-
-footer .menu li a {
-  font-size: 1.2em;
-  color: #ccc;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-  text-decoration: none;
-  opacity: 0.75;
-}
-footer .menu li a:hover {
-  opacity: 1;
-  color: #fff;
-} */
-
-p {
-  color: white;
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 10px;
-  font-size: 1.1em;
-}
-
 .copyright {
-  color: white;
+  z-index: 1010;
 }
 
 /*wave and animation*/
 footer .wave {
   position: absolute;
-  top: -20px;
+  bottom: 0px;
   left: 0;
   width: 100%;
-  height: 20px;
+  height: 100px;
   background: url(https://i.ibb.co/rZt4Nhg/wave.png);
   background-size: 1000px 100px;
 }
