--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,20 +1,22 @@
 <%- include("partials/header.ejs") %>
 
-<img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
-<h1>About DashBoardSG</h1>
+<div class="titleBlock">
+  <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
+  <h1>DashBoardSG</h1>
+</div>
   <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
   <div class="about">
     <h2>
       DashBoardSG is a minimum viable product.
     </h2>
     <h3>New features to be built in the future include:</h3>
-    <ol>
+    <ul>
       <li>Cookies to allow persistence</li>
       <li>Addition of new dashboard items (Suggestions are welcome)</li>
       <li>More error handling routines and messages</li>
       <li>Regular refresh of displayed data</li>
       <li>UI fixes like the hamburger, navbar, contact page, etc.</li>
-    </ol>
+    </ul>
   </div>
     
 <%- include("partials/footer.ejs") %>
