--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,36 +21,35 @@
       
 </script>
 
-<div>
+<div class="titleBlock">
   <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
   <h1>DashBoardSG</h1>
-  <br>
 </div>
-<div>
+<div class="formBlock custom-control custom-checkbox">
   <h2>What's important to you?</h2>
     
   <form id="myForm" action="/display" method="post">
+    <div class="custom-control custom-checkbox">
+      <label class="custom-control-label" for="dash1">
+        <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected" checked> PM2.5
+      </label>
 
-    <label for="dash1">
-      <input type="checkbox" id="dash1" name="PM25" value= "selected" checked> PM2.5
-    </label>
+      <label class="custom-control-label" for="dash2">
+        <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected" checked> PSI
+      </label>
 
-    <label for="dash2">
-      <input type="checkbox" id="dash2" name="PSI" value="selected" checked> PSI
-    </label>
+      <label class="custom-control-label" for="dash3">
+        <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected" checked> UVI
+      </label>
 
-    <label for="dash3">
-      <input type="checkbox" id="dash3" name="UVI" value="selected" checked> UVI
-    </label>
-
-    <label for="dash4">
-      <input type="checkbox" id="dash4" name="Weather" value="selected" checked> Weather
-    </label>
-    <br> <!-- Add a line break here -->
-    <input type="submit" value="Display">
+      <label class="custom-control-label" for="dash4">
+        <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected" checked> Weather
+      </label>
+    </div>
+    <br>
+    <button class="btn btn-primary btn-lg" type="submit">Display</button>
     <input type="hidden" id="userLatitude" name="userLatitude" value="latitude">
     <input type="hidden" id="userLongitude" name="userLongitude" value="longitude">
-
   </form>
 </div>
   <h3 id="browserWarning"></h3>
