--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,6 +16,7 @@
     <li><a href="#">Team</a></li>
     <li><a href="/contact">Contact</a></li>
   </ul> -->
+  <p class="copyright"> Made with ❤️ in Singapore © <%= new Date().getFullYear() %></p>
 </footer>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
