--- a/views/display.ejs
+++ b/views/display.ejs
@@ -7,7 +7,7 @@
 
 <div class="row">
   <% Object.keys(selectedDash).forEach(key => { %>
-    <div class="card col-md-auto col-3">
+    <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-3">
       <strong><%= selectedDash[key].title %></strong>
       <div class="value"><%= selectedDash[key].value %></div>
       <div class="unit"><%= selectedDash[key].unit %></div>
