--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,6 +17,7 @@
   background-color: #f0f0f0; /* Background color for the squares */
   opacity: 0.9;
   display: inline;
+  max-width: 15rem;
 }
 .card strong {
   font-size: 1.5em; /* Large font size for headings */
