--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,6 +17,7 @@
   background-color: #f0f0f0; /* Background color for the squares */
   opacity: 0.9;
   display: inline;
+  min-width: 10rem;
   max-width: 15rem;
 }
 .card strong {
@@ -32,8 +33,8 @@
   color: darkgray; /* Adjust color for units */
 }
 footer {
-  min-height: 50px;
-  padding: 20px 50px;
+  min-height: 20px;
+  padding: 10px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,7 +53,7 @@ footer .wave {
   bottom: 0px;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 50px;
   background: url(https://i.ibb.co/rZt4Nhg/wave.png);
   background-size: 1000px 100px;
 }
@@ -67,7 +68,7 @@ footer .wave#wave1 {
 footer .wave#wave2 {
   z-index: 999;
   opacity: 0.5;
-  bottom: 10px;
+  bottom: 0px;
   animation: animateWave_02 4s linear infinite;
 }
 footer .wave#wave3 {
@@ -80,7 +81,7 @@ footer .wave#wave3 {
 footer .wave#wave4 {
   z-index: 999;
   opacity: 0.7;
-  bottom: 20px;
+  bottom: 0px;
   animation: animateWave_02 3s linear infinite;
 }
 
