--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -6,21 +6,21 @@ body {
 header{
   flex: 0 0 auto;
   background-color: blue;
-  margin-bottom: 1.5rem; 
+  margin-bottom: 1.5rem;
 }
 main {
+  background: url("https://wallpaperaccess.com/full/328442.jpg") center/cover fixed;
+  filter: brightness(50%); /* Adjust the percentage for brightness */
   position: relative;
-  margin 0;
-  padding 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   align-items: center;
   text-align: center;
-  display: flex;
-  flex: 1 0 auto;
-  flex-direction: column;
 }
 body {
-  height: 100%;
-  background: url("https://wallpaperaccess.com/full/328442.jpg") center/cover fixed;
   margin: 0 10;
   align-items: center;
   color: #ffffff; /* Set text color for better visibility */
