--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -10,24 +10,23 @@ header{
 }
 main {
   background: url("https://wallpaperaccess.com/full/328442.jpg") center/cover fixed;
-  filter: brightness(50%); /* Adjust the percentage for brightness */
+  /* filter: brightness(50%); */
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
+  width: 100%;
   margin: 0;
   padding: 0;
   align-items: center;
   text-align: center;
 }
 body {
-  filter: brightness(100%); /* Adjust the percentage for brightness */
-  margin: 0 10;
+  margin: 0;
   align-items: center;
-  color: #ffffff; /* Set text color for better visibility */
+  color: white; /* Set text color for better visibility */
 }
 p {
-  color: white;
   font-size: medium;
   margin-top: 10px;
   margin-bottom: 10px;
