--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,11 @@
 <%- include("partials/header.ejs") %>
 
-<div class="titleBlock">
-  <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
-  <h1>DashBoardSG</h1>
-</div>
-  <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
+<body>
+  <div class="titleBlock">
+    <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
+    <h1>DashBoardSG</h1>
+  </div>
+    <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
   <div class="about">
     <h2>
       DashBoardSG is a minimum viable product.
@@ -18,5 +19,6 @@
       <li>UI fixes like the hamburger, navbar, contact page, etc.</li>
     </ul>
   </div>
-    
+</body>
+
 <%- include("partials/footer.ejs") %>
