--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,15 +1,16 @@
 <%- include("partials/header.ejs") %>
 
-<div class="titleBlock">
-  <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
-  <h1>Contact Me</h1>
-</div>
-<form>
-  <input name="name" type="text" class="feedback-input" placeholder="Name" />
-  <input name="email" type="text" class="feedback-input" placeholder="Email" />
-  <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-  <br>
-  <button class="btn btn-primary btn-lg" type="submit">Submit</button>
-</form>
-
+<body>
+  <div class="titleBlock">
+    <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
+    <h1>Contact Me</h1>
+  </div>
+  <form>
+    <input name="name" type="text" class="feedback-input" placeholder="Name" />
+    <input name="email" type="text" class="feedback-input" placeholder="Email" />
+    <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+    <br>
+    <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+  </form>
+</body>
 <%- include("partials/footer.ejs") %>
