--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,17 +1,28 @@
 <%- include("partials/header.ejs") %>
 
-<div class="titleBlock">
-  <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
-  <h1>DashBoardSG</h1>
-</div>
+<body>
+  <div class="titleBlock">
+    <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
+    <h1>DashBoardSG</h1>
+  </div>
 
-<div class="row">
-  <% Object.keys(selectedDash).forEach(key => { %>
-    <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-3 col">
-      <strong><%= selectedDash[key].title %></strong>
-      <div class="value"><%= selectedDash[key].value %></div>
-      <div class="unit"><%= selectedDash[key].unit %></div>
+  <div class="container text-center">
+    <div class="row align-items-center">
+      <% Object.keys(selectedDash).forEach(key => { %>
+        <div class="card col-xs col-sm-4 col-md-2 col">
+          <strong><%= selectedDash[key].title %></strong>
+          <% if (selectedDash[key].value.length > 10) { %>
+            <div class="value" style="font-size: 1.2em;"><%= selectedDash[key].value %></div>
+          <% } else if (selectedDash[key].value.length > 6) { %>
+            <div class="value" style="font-size: 1.6em;"><%= selectedDash[key].value %></div>
+          <% } else { %>
+            <div class="value" style="font-size: 2em;"><%= selectedDash[key].value %></div>
+          <% } %>
+          <div class="unit"><%= selectedDash[key].unit %></div>
+        </div>
+      <% }) %>
     </div>
-  <% }) %>
-</div>
+  </div>
+</body>
+
 <%- include("partials/footer.ejs") %>
