--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+i {
+  font-size: 1rem;
+  /* vertical-align: middle; */
+  margin-right: 0.2rem;
+}
 .navbar-brand {
   padding-left: 1rem;
 }
