--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,9 +14,7 @@
     <ul>
       <li>Cookies to allow persistence</li>
       <li>Addition of new dashboard items (Suggestions are welcome)</li>
-      <li>More error handling routines and messages</li>
-      <li>Regular refresh of displayed data</li>
-      <li>UI fixes like the hamburger, navbar, contact page, etc.</li>
+      <li>Troubleshoot the hamburger on navbar</li>
     </ul>
   </div>
 </body>
